Rmd files: Polymode + ESS.

--- a/README.org
+++ b/README.org
@@ -241,11 +241,14 @@ Use position registers (a sort of bookmark) with ~F1—F4~: ~C-F1~ to
 | ~F1–F4~     | Jump to registers |
 | ~C-F1–C-F4~ | Save registers    |
 
-| Key name | Operation        |
-|----------+------------------|
-| ~F5~     | Project explorer |
-| ~F6~     | Magit            |
-| ~F7~     | Eshell           |
+| Key name | Operation            |
+|----------+----------------------|
+| ~F5~     | Project explorer     |
+| ~F6~     | Magit                |
+| ~F7~     | Eshell               |
+| ~F8~     | Polymode Weave       |
+| ~C-F8~   | Polymode Export      |
+| ~C-S-F8~ | knitr::pandoc Export |
 
 | Key name  | Operation                            |
 |-----------+--------------------------------------|
