--- a/README.org
+++ b/README.org
@@ -237,10 +237,12 @@ status.showUntrackedFiles normal=)
 
 ** ESS
 
-| Key name  | Operation                                                  |
-|-----------+------------------------------------------------------------|
-| ~C-c C-r~ | Move cursor to previous command + at the top of the window |
-| ~C-c C-o~ | Delete everything from last command to current prompt      |
+| Key name     | Operation                                                  |
+|--------------+------------------------------------------------------------|
+| ~C-c C-r~    | Move cursor to previous command + at the top of the window |
+| ~C-c C-o~    | Delete everything from last command to current prompt      |
+| ~C-return~   | Add a fenced R code block (in RMarkdown file)              |
+| ~C-S-return~ | Add inline R code (in RMarkdown file)                      |
 
 
 ** Function keys (~F1–F12~)
@@ -253,16 +255,17 @@ Use position registers (a sort of bookmark) with ~F1—F4~: ~C-F1~ to
 | ~F1–F4~     | Jump to registers |
 | ~C-F1–C-F4~ | Save registers    |
 
-| Key name | Operation                                        |
-|----------+--------------------------------------------------|
-| ~F5~     | Project explorer                                 |
-| ~C-F5~   | Dired in current directory                       |
-| ~C-S-F5~ | Activate write mode in Dired (~C-c C-c~ to exit) |
-| ~F6~     | Magit                                            |
-| ~F7~     | Eshell                                           |
-| ~F8~     | Polymode Weave                                   |
-| ~C-F8~   | Polymode Export                                  |
-| ~C-S-F8~ | knitr::pandoc Export                             |
+| Key name | Operation                                            |
+|----------+------------------------------------------------------|
+| ~F5~     | Project explorer                                     |
+| ~C-F5~   | Dired in current directory                           |
+| ~C-S-F5~ | Activate write mode in Dired (~C-c C-c~ to exit)     |
+| ~F6~     | Magit                                                |
+| ~C-F6~   | Eshell                                               |
+| ~F7~     | Polymode Weave                                       |
+| ~C-F7~   | Polymode Export                                      |
+| ~C-F8~   | Run knitr::pandoc (with custom options) on .Rmd file |
+| ~C-S-F8~ | Run bookdown::render on index.Rmd                    |
 
 | Key name  | Operation                            |
 |-----------+--------------------------------------|
