--- a/init.org
+++ b/init.org
@@ -698,13 +698,16 @@ silently:
 
 =Dired= (launched in current directory with with ~C-F5~) list
 directories first, intelligently guess where to copy (other window),
-switch to WDired mode (to 'write' file names) with ~C-S-F5~, and go
-to bookmarks with ~$~:
+and does not ask for confirmation for recursive copies and
+deletes. Switch to WDired mode (to 'write' file names) with ~C-S-F5~,
+and go to bookmarks with ~$~:
 
 #+BEGIN_SRC emacs-lisp
   (setq
    dired-listing-switches "-aBhl  --group-directories-first"
-   dired-dwim-target t)
+   dired-dwim-target t
+   dired-recursive-copies (quote always)
+   dired-recursive-deletes (quote always))
   (global-set-key (kbd "C-<f5>")
                   (lambda ()
                     (interactive)
